Overflow issue on hero solved

--- a/style.css
+++ b/style.css
@@ -200,6 +200,7 @@ h1 {
 
     .hero-section {
         padding-top: 14vh;
+        overflow: hidden;
     }
 
 
@@ -219,8 +220,9 @@ h1 {
 
 @media (max-width: 640px) {
 
-    .hero {
+    .hero-section {
         padding-top: 12vh;
+        overflow: hidden;
     }
 
 
@@ -249,6 +251,7 @@ h1 {
 /*---COIN BURGER SECTION BEGIN---> */
 
 #coin-burger {
+    height: 60vh;
     background-color: #312F2F;
     display: grid;
     grid-template-columns: repeat(2, 50vw);
@@ -256,7 +259,9 @@ h1 {
     color: white;
 }
 
-
+#coin-burger div {
+    overflow: hidden;
+}
 
 
 .coin-burger-text-wrap {
@@ -304,8 +309,9 @@ h1 {
 
 
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
     #coin-burger {
+        height: 100vh;
         display: grid;
         grid-template-columns: repeat(1, 100vw);
         grid-template-rows: repeat(1, auto);
